fixed overflow

--- a/front/src/css/chat.css
+++ b/front/src/css/chat.css
@@ -16,6 +16,7 @@
     flex: 15%;
     align-self: stretch;
     width: 20vw;
+    overflow: auto;
 }
 
 
