--- a/front/src/css/friend.css
+++ b/front/src/css/friend.css
@@ -6,6 +6,7 @@
     gap: 10px;
     flex: 85%;
     align-self: stretch;
+    overflow: auto;
 
 }
 
